# process_control

./: COPYRIGHT  Cargo.toml  LICENSE-THIRD-PARTY  README.md  build.rs
.github/actions/run-job/: action.yml
.github/workflows/: build.yml
src/: attr-aliases.txt  common.rs  control.rs  lib.rs  timeout.rs  unix.rs  windows.rs
src/control/: mod.rs  pipe.rs
src/externs/: libwait_for_process.c
src/unix/: exit_status.rs  mod.rs  read.rs
src/unix/wait/: common.rs  mod.rs  waitid.rs
src/windows/: exit_status.rs  mod.rs  read.rs
tests/: debug.rs  deprecated.rs  integration.rs  memory_limit.rs  time_limit.rs
tests/common/: mod.rs  unix.rs  windows.rs
