[package]
name = "process_control"
version = "3.5.0"
authors = ["dylni"]
edition = "2021"
rust-version = "1.58.0"
description = """
Methods for ergonomically running processes with timeouts
"""
readme = "README.md"
repository = "https://github.com/dylni/process_control"
license = "MIT OR Apache-2.0"
keywords = ["kill", "process", "terminate", "timeout", "wait"]
categories = ["concurrency", "os"]
exclude = [".*", "/rustfmt.toml", "/tests"]

[package.metadata.docs.rs]
rustc-args = ["--cfg", "process_control_docs_rs"]
rustdoc-args = ["--cfg", "process_control_docs_rs"]

[dependencies]
signal-hook = { version = "0.3", optional = true }

[target.'cfg(unix)'.dependencies]
crossbeam-channel = { version = "0.5", optional = true }
libc = "0.2.120"

[target.'cfg(not(all(unix, not(any(target_os = "espidf", target_os = "horizon", target_os = "openbsd", target_os = "redox", target_os = "tvos", target_os = "vxworks")))))'.dependencies]
signal-hook = { version = "0.3" }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.36", features = ["Win32_Foundation", "Win32_Security", "Win32_System_JobObjects", "Win32_System_Threading", "Win32_System_WindowsProgramming"] }

[features]
__unstable-force-missing-waitid = ["signal-hook"]
